traces/bug_694.txt
examples++-load/medit.cpp:1584: error: DEAD_STORE
  The value written to &plotting (type _Bool) is never used.
Showing all 1 steps of the trace


examples++-load/medit.cpp:1584:3: Write of unused value
1582.     if (nargs[3]) wait= GetAny<bool>((*nargs[3])(stack));
1583.     
1584.     bool plotting = true;   
          ^
1585.     //  drawing part  ------------------------------
1586.     
